Begun work on front-end. Doing way too much styling teehee

--- a/Tower.client/src/assets/scss/main.scss
+++ b/Tower.client/src/assets/scss/main.scss
@@ -10,13 +10,14 @@ body{
 
 #app {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   min-height: 100vh;
   background-color: var(--body-bg);
 }
 
 main {
   flex-grow: 1;
+  background-color: rgb(28, 1, 1);
 }
 
 a {
