--- a/Tower.client/src/assets/scss/main.scss
+++ b/Tower.client/src/assets/scss/main.scss
@@ -17,7 +17,11 @@ body{
 
 main {
   flex-grow: 1;
-  background-color: rgb(28, 1, 1);
+  background-color: #1c0101;
+}
+
+.bg-my-red{
+  background-color: #000000;
 }
 
 a {
